--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,33 +8,6 @@
         tools:context=".MainActivity" android:background="@color/screenBackground2">
 
     <TextView
-            android:id="@+id/label1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@string/click_instruction_head"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
-
-    <TextView
-            android:id="@+id/label2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/rand_instruction_head"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/label1"/>
-
-    <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +20,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label2" app:layout_constraintVertical_bias="0.308"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText"
+            app:layout_constraintVertical_bias="0.315"/>
 
     <!--<Button-->
     <!--android:id="@+id/toast_button"-->
@@ -84,27 +58,59 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Count"
-            android:layout_marginLeft="60dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
             android:onClick="countMe"
-    />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.497" app:layout_constraintStart_toEndOf="@+id/reset_button"
+            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/random_button" android:layout_marginRight="8dp"/>
 
     <Button
             android:id="@+id/random_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Random"
-            android:layout_marginRight="60dp"
+            android:layout_marginRight="32dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             android:onClick="randomMe"
+    />
+    <EditText
+            android:layout_width="244dp"
+            android:layout_height="44dp"
+            android:inputType="number"
+            android:text="@string/edit_msg"
+            android:ems="10"
+            android:id="@+id/editText" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
+            app:layout_constraintEnd_toStartOf="@+id/enter" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
+    <Button
+            android:text="@string/btn_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/enter" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toEndOf="@+id/editText"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
+            android:onClick="sendMessage"
+    />
+    <Button
+            android:text="Reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/reset_button"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:onClick="resetNo"
     />
 
 </android.support.constraint.ConstraintLayout>
