--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -33,6 +33,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_bias="0.45"
-    />
+            app:layout_constraintVertical_bias="0.32"
+            app:layout_constraintHorizontal_bias="0.498"/>
 </android.support.constraint.ConstraintLayout>
